@@ -39,8 +39,7 @@ be installed for the tests to run; see below)::
 It is also possible to install only the build slave, installing only the
 parts of Bitten that are needed by clients to run builds::
 
-  $ python setup-slave.py install
-
+  $ python setup.py --without-master install
 
 What's left to do now depends on whether you want to use the build master and
 web interface, or just the build slave. In the latter case, you're already
